--- a/Inspirational Bytes/Views/Base.lproj/Main.storyboard
+++ b/Inspirational Bytes/Views/Base.lproj/Main.storyboard
@@ -87,14 +87,14 @@
                                 <rect key="frame" x="0.0" y="44" width="428" height="882"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" id="QrI-Wv-K3o" userLabel="QOTDLabel">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" id="QrI-Wv-K3o" userLabel="qotdLabel">
                                 <rect key="frame" x="20" y="204" width="388" height="414"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" id="FL4-IM-yAt" userLabel="QOTDAuthorLabel">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" id="FL4-IM-yAt" userLabel="qotdAuthorLabel">
                                 <rect key="frame" x="32" y="626" width="361" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
@@ -166,12 +166,12 @@
                     <tabBarItem key="tabBarItem" image="text.bubble.fill" catalog="system" selectedImage="text.bubble.fill" id="4wg-NM-6uc"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="QOTDAuthorLabel" destination="FL4-IM-yAt" id="W3r-2f-SdU"/>
-                        <outlet property="QOTDLabel" destination="QrI-Wv-K3o" id="RVo-7h-ub0"/>
                         <outlet property="activityIndicator" destination="fNV-97-muC" id="mFF-fk-X8K"/>
                         <outlet property="favButton" destination="sYZ-vs-1Vq" id="L5I-ej-xjE"/>
                         <outlet property="getQuoteButton" destination="ssn-A4-kk8" id="WgM-JT-J5n"/>
                         <outlet property="imageView" destination="lwj-wV-ic4" id="lxZ-if-Ycg"/>
+                        <outlet property="qotdAuthorLabel" destination="FL4-IM-yAt" id="Hqd-kb-KZz"/>
+                        <outlet property="qotdLabel" destination="QrI-Wv-K3o" id="XLt-dW-Aeu"/>
                         <outlet property="shareButton" destination="jhC-Zv-Wh3" id="vpB-Vx-AL6"/>
                     </connections>
                 </viewController>
